--- a/package.json
+++ b/package.json
@@ -1,11 +1,16 @@
 {
-  "name": "google-maps-data-parameter-parser",
-  "version": "1.0.0",
-  "devDependencies": {
-    "jest": "^27.0.3"
-  },
-  "scripts": {
-    "test": "jest"
-  },
-  "main": "src/gmdp.js"
+    "name": "google-maps-data-parameter-parser",
+    "version": "1.0.0",
+    "devDependencies": {
+        "@babel/preset-env": "^7.24.6",
+        "@babel/preset-typescript": "^7.24.6",
+        "@jest/globals": "^29.7.0",
+        "jest": "^29.0.3",
+        "jest-environment-jsdom": "^29.7.0",
+        "ts-jest": "^29.1.3"
+    },
+    "scripts": {
+        "test": "jest"
+    },
+    "main": "src/gmdp.js"
 }
