--- a/package.json
+++ b/package.json
@@ -7,10 +7,17 @@
         "@jest/globals": "^29.7.0",
         "jest": "^29.0.3",
         "jest-environment-jsdom": "^29.7.0",
-        "ts-jest": "^29.1.3"
+        "ts-jest": "^29.1.3",
+        "tsup": "^8.0.2"
     },
     "scripts": {
+        "build": "tsup",
         "test": "jest"
     },
-    "main": "src/gmdp.ts"
+    "main": "./dist/gmdp.js",
+    "module": "./dist/gmdp.mjs",
+    "types": "./dist/gmdp.d.ts",
+    "files": [
+        "dist"
+    ]
 }
